#3 Switch to platform with enabled Java 14 features and records